@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the Final Cut widget toolkit                    *
 *                                                                      *
-* Copyright 2018 Markus Gans                                           *
+* Copyright 2018-2019 Markus Gans                                      *
 *                                                                      *
 * The Final Cut is free software; you can redistribute it and/or       *
 * modify it under the terms of the GNU Lesser General Public License   *
@@ -85,6 +85,7 @@ class FTermcapQuirks
     static void sunConsole();
     static void screen();
     static void general();
+    static void ecma48();
 
     // Data Members
     static FTermcap::tcap_map* tcap;
