@@ -3,6 +3,7 @@
 	* Integration of an output filter to replace missing characters
 	* Better Linux console support for UTF-8 encoding 
 	  (Default is PC charset encoding)
+	* Better background color for all terminals with a fixed color palette
 
 2018-12-31  Markus Gans  <guru.mail@muenster.de>
 	* Use the override specifier
